[metadata]
name = desmos2python
author = Robert Ahlroth Capps
author_email = rcapps@teladochealth.com
description = seamless conversion between Desmos LaTeX equations and executable Python code.
license = MIT License
keywords =
    desmos2python
    desmos
    graphing calculator
    conversion
    sympy
platforms = Windows, macOS, Linux
url = https://github.com/rocapp/desmos2python
project_urls =
    Documentation = https://desmos2python.readthedocs.io/en/latest
    Issue Tracker = https://github.com/rocapp/desmos2python/issues
    Source Code = https://github.com/rocapp/desmos2python
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[bdist_wheel]
universal = 1

[options]
python_requires = >=3.8.10
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[options.entry_points]
distutils.commands =
     prebuild_d2p = desmos2python._setuptools_ext:prebuild_d2p

[options.package_data]
* = *.json *.pyjinja2 *.js

[flake8]
exclude = docs
